--- a/Activity_IntentFilter/app/src/main/res/layout/activity_main.xml
+++ b/Activity_IntentFilter/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,30 @@
     android:layout_height="match_parent"
     tools:context="toan.net.activity_intent.MainActivity">
 
-    <TextView
+    <EditText
+        android:layout_marginTop="50dp"
+        android:hint="@string/number"
+        android:id="@+id/edtSendMessage"
+        android:gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/btnDefault"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="50dp"
+        android:text="@string/default_01"
+        app:layout_constraintTop_toBottomOf="@id/edtSendMessage" />
+
+
+    <Button
+        android:id="@+id/btnCustom"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:gravity="fill_vertical"
+        android:text="@string/custom"
+        app:layout_constraintTop_toBottomOf="@id/btnDefault" />
 
 </android.support.constraint.ConstraintLayout>
